updates - added secure area - started working on user area to get users from the db

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,11 +1,19 @@
+ISpySiUserBundle:
+    resource: "@ISpySiUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
+ISpySiAdminBundle:
+    resource: "@ISpySiAdminBundle/Resources/config/routing.yml"
+    prefix:   /
+    
+ISpySiSecurityBundle:
+    resource: "@ISpySiSecurityBundle/Resources/config/routing.yml"
+    prefix:   /
+
 ISpySiWelcomeBundle:
     resource: "@ISpySiWelcomeBundle/Resources/config/routing.yml"
     prefix:   /
-
-#AcmeHelloBundle:
-#    resource: "@AcmeHelloBundle/Resources/config/routing.yml"
-#    prefix:   /
-
+     
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
